# pal

./: .gitignore  generate_index.py  pyproject.toml
phi-4/: config.json
src/pal/: llm.py  main.py  query.py  status.py
ui/: package-lock.json  package.json
ui/src/app/: page.tsx
ui/src/app/api/query/: route.ts
ui/src/components/: ChatBox.tsx
